--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -8,7 +8,7 @@ CXXFLAGS = -Wall -std=c++11
 TARGET = movie_database
 
 # Source files
-SRCS = main.cpp Movie.cpp Database.cpp
+SRCS = main.cpp Movie.cpp Movie.h MovieDat.cpp Database.h
 
 # Object files (generated from .cpp files)
 OBJS = main.o Movie.o Database.o
