--- a/HW2/Makefile
+++ b/HW2/Makefile
@@ -8,23 +8,36 @@ CXX = g++
 # -std=c++17 : uses the C++17 standard
 CXXFLAGS = -c -g -Wall -std=c++17
 
-# The build target executable file; .exe is not required
-PROGRAM = movie_database.out
+OBJS = main.o Media.o Movie.o TvShows.o Music.o Database.o
 
-# List all .cpp files separated by space
-CPPFILES = main.cpp Movie.cpp Database.cpp Media.cpp Music.cpp TvShows.cpp
+TARGET = mediadb
 
-# Default rule to build the executable
-all:
-	# Compile all the .cpp files into .o object files
-	$(CXX) $(CXXFLAGS) $(CPPFILES)
-	# Link all object files into the final executable
-	$(CXX) -o $(PROGRAM) *.o
+$(TARGET): $(OBJS)
+	$(CXX) $(OBJS) -o $(TARGET)
+
+main.o: main.cpp
+	$(CXX) $(CXXFLAGS) -c main.cpp
+
+Media.o: Media.cpp Media.h
+	$(CXX) $(CXXFLAGS) -c Media.cpp
+
+Movie.o: Movie.cpp Movie.h
+	$(CXX) $(CXXFLAGS) -c Movie.cpp
+
+TvShows.o: TvShows.cpp TvShows.h
+	$(CXX) $(CXXFLAGS) -c TvShows.cpp
+
+Music.o: Music.cpp Music.h
+	$(CXX) $(CXXFLAGS) -c Music.cpp
+
+Database.o: Database.cpp Database.h
+	$(CXX) $(CXXFLAGS) -c Database.cpp
 
 # Clean rule to delete object and binary files
 clean:
-	rm -f $(PROGRAM) *.o
+	rm -f $(OBJS) $(TARGET)
 
+.PHONY: clean
 # Run rule to execute the program
 run:
 	./$(PROGRAM)
